merge 8.0.5 changes