@@ -29,20 +29,21 @@ import org.openqa.selenium.remote.CapabilityType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import com.qaprosoft.carina.core.foundation.webdriver.IDriverPool;
+import com.zebrunner.carina.proxy.SystemProxy;
 import com.zebrunner.carina.proxy.browserup.ProxyPool;
-import com.zebrunner.carina.utils.commons.SpecialKeywords;
 import com.zebrunner.carina.utils.Configuration;
 import com.zebrunner.carina.utils.Configuration.Parameter;
 import com.zebrunner.carina.utils.R;
-import com.qaprosoft.carina.core.foundation.webdriver.IDriverPool;
-import com.zebrunner.carina.proxy.SystemProxy;
+import com.zebrunner.carina.utils.commons.SpecialKeywords;
 
 import io.appium.java_client.remote.options.SupportsLanguageOption;
 import io.appium.java_client.remote.options.SupportsLocaleOption;
 
 public abstract class AbstractCapabilities<T extends MutableCapabilities> {
     private static final Logger LOGGER = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
-    private static final ArrayList<String> numericCaps = new ArrayList<>(Arrays.asList("idleTimeout", "waitForIdleTimeout"));
+    private static final ArrayList<String> numericCaps = new ArrayList<>(Arrays.asList("waitForIdleTimeout"));
+    private static final List<String> STRING_CAPABILITIES = List.of("idleTimeout");
 
     /**
      * Generate Capabilities according to configuration file
@@ -105,7 +106,9 @@ public abstract class AbstractCapabilities<T extends MutableCapabilities> {
             String capabilityName = entry.getKey().replaceAll(prefix, "");
             Object value = R.CONFIG.get(entry.getKey());
 
-            if (numericCaps.contains(capabilityName) && isNumber(entry.getValue())) {
+            if (STRING_CAPABILITIES.contains(capabilityName)) {
+                value = String.valueOf(entry.getValue());
+            } else if (numericCaps.contains(capabilityName) && isNumber(entry.getValue())) {
                 LOGGER.debug("Adding {} to capabilities as integer", entry.getValue());
                 value = Integer.parseInt(entry.getValue());
             } else if ("false".equalsIgnoreCase(entry.getValue())) {
